--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Atmosfy</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Atmosfy</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <nav class="navbar navbar-dark navbar-expand-lg w-100 position-fixed top-0">
+      <h2 class="navbar-brand">Atmosfy</h2>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link text-white active" href="./">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="./About.html">About</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="#footer">Contact Us</a></li>
+        </ul>
+      </div>
+  </nav>
+    <main class="container">
       <h1>☀️ Atmosfy 🌦</h1>
       <div class="search-box">
         <input type="text" id="cityInput" placeholder="Enter city name" />
@@ -15,12 +33,7 @@
       </div>
       <div class="current-weather">
         <h2 id="cityName">Your City</h2>
-        <img
-          id="weatherIcon"
-          src="https://openweathermap.org/img/wn/02d@2x.png"
-          alt="Weather Icon"
-          class="icon"
-        />
+        <img id="weatherIcon" src="https://openweathermap.org/img/wn/02d@2x.png" alt="Weather Icon" class="icon" />
         <p id="temperature"></p>
         <p id="description"></p>
         <p id="humidity"></p>
@@ -31,6 +44,27 @@
         <div id="forecastContainer"></div>
       </div>
     </div>
-    <script src="script.js"></script>
-  </body>
+  </main>
+<footer class="footer" id="footer">
+  <div class="ending">
+    <p>&copy; code-with-manish.netlify.app | All Rights Reserved.</p>
+    <p>
+      Designed with ❤️ by Innocent Coder | Contact on
+      <a href="mailto:manishram0710@gmail.com" target="_blank"> Gmail</a> |
+    </p>
+    <p>
+      Follow me on: 
+      <a href="https://github.com/Manish-Codes-00/" target="_blank">GitHub</a> | 
+      <a href="https://www.linkedin.com/in/manish-124103207" target="_blank">LinkedIn</a> | 
+    </p>
+  </div>
+</footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+
+</body>
+
 </html>
