--- a/About.html
+++ b/About.html
@@ -11,16 +11,16 @@
 </head>
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg w-100 position-fixed top-0">
-      <h2 class="navbar-brand">Atmosfy</h2>
+      <h2 class="brand">Atmosfy</h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link text-white active" href="./">Home</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="./About.html">About</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#footer">Contact Us</a></li>
+          <li class="nav-item"><a class="links text-white active" href="./">Home</a></li>
+          <li class="nav-item"><a class="links text-white" href="./About.html">About</a></li>
+          <li class="nav-item"><a class="links text-white" href="#footer">Contact Us</a></li>
         </ul>
       </div>
   </nav>
