bug fixes and refining script

--- a/About.html
+++ b/About.html
@@ -39,8 +39,8 @@
     <h3>Our Key Features:</h3>
     <ul>
       <li>🌍 Global city search</li>
-      <li>📅 5-day forecast with daily temperature trends</li>
-      <li>🌡️ Real-time weather data including temperature, humidity, and wind speed</li>
+      <li>📅 5-day forecast with daily 🌡️ temperature trends</li>
+      <li>Real-time weather data including temperature, humidity, and wind speed</li>
       <li>📱 Mobile-friendly design for easy access anytime, anywhere</li>
     </ul>
     <h3>Our Mission:</h3>
